kubernetes/jsdyb-k8s-001/apps/storage/rook-ceph/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:rook"
  labels:
    app.kubernetes.io/name: &app rook-ceph
    app.kubernetes.io/instance: *app
    app.kubernetes.io/part-of: *app
  name: *app
  namespace: storage
spec:
  hostnames:
  - rook.${INTERNAL_DOMAIN}
  parentRefs:
  - kind: Gateway
    name: private-gateway
    namespace: gateway
  rules:
  - backendRefs:
    - kind: Service
      name: rook-ceph-mgr-dashboard
      port: 7000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
